--- a/p/hogo的使用技巧/index.html
+++ b/p/hogo的使用技巧/index.html
@@ -77,7 +77,7 @@
         
         <div class="site-meta">
             <h1 class="site-name"><a href="/">Ruizumoe&#39;Blog</a></h1>
-            <h2 class="site-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+            <h2 class="site-description">一个想走进游戏世界的玩家</h2>
         </div>
     </header><ol class="social-menu">
             
